chore: code clean up chore: remove page-content element chore: optimize masthead background element chore: fix background not stretching to full width

--- a/build-001/src/styles/components.scss
+++ b/build-001/src/styles/components.scss
@@ -244,9 +244,23 @@ section {
 
   .masthead-content { z-index: 30; }
 
-  .masthead-bground {
-    position: absolute;
-    z-index: 1;
+  .masthead-wrapper {
+
+    .mh {
+      position: absolute;
+      top: 0px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      z-index: 1;
+
+      &.bg-home0 { background-image: url('../assets/bground/bg-home.jpg'); }
+      &.bg-about0 { background-image: url('../assets/bground/bg-about.jpg'); }
+    }
   }
 
   .masthead-header {
